# safe-rm

./: .cil  .gitignore  Cargo.toml  Changes  Makefile  Manifest  README  README.md  RELEASING  TESTING  TODO  safe-rm  safe-rm.1  safe-rm.desktop
issues/: a_fb33c51a.cil  c_0e4ab58b.cil  c_174a2b10.cil  i_18fea1af.cil  i_50b58759.cil  i_594f1a26.cil  i_7e30a60c.cil  i_7ec7f2eb.cil  i_8cbe718f.cil  i_9b25b589.cil  i_ba36a817.cil  i_cdba855f.cil
src/: main.rs  main_test.rs
