[package]
name = "safe-rm"
version = "1.2.0"
authors = ["Francois Marier <francois@fmarier.org>"]
edition = "2018"
description = "preventing the accidental deletion of important files"
readme = "README.md"
homepage = "https://launchpad.net/safe-rm"
repository = "https://git.launchpad.net/safe-rm"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "filesystem"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
toml = "0.5.8"
serde_derive = "1.0.126"
serde = "1.0.126"

[dev-dependencies]
tempfile = "3.2.0"

# Optimize for size
# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
# panic = 'abort'
